# fhir-clinical-data-lakehouse

./: .gitignore  README.md  pyproject.toml  requirements.txt
fhir_analytics2/: dbt_project.yml
fhir_analytics2/models/: clinical_patient_summary.sql  dim_conditions.sql  dim_encounters.sql  dim_medications.sql  dim_patients.sql  sources.yml
fhir_lakehouse/: __init__.py  assets.py  requirements.txt
sql_scripts/: 01_infrastructure_setup.sql  02_data_ingestion.ipynb  03_clinical_analysis.sql
